Gave the wrong folder name for assignment

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
 						In this assignment you will get started creating the application by first focusing on creating a static set of pages that will serve as a prototype of the final application. The prototype will allow evaluating user interface aspects of the application such as navigation, information layout, page dependencies, modalities, authentication and authorization. Although the pages will have links, forms and buttons to interact with, the application won't actually do anything yet. It will only be an empty shell for now. We will add the functionality as we progress through the rest of the assignments.</p>
             	</div>
             <div class="card-action">
-              	<a href="assignments/home.html">Assignment 2</a>
+              	<a href="assignment/home.html">Assignment 2</a>
               	<a href="#">This is a link</a>
             </div>
           </div>
