Removed the code pointing to assets folder and added links to the forms tab

--- a/public/assignment/admin.html
+++ b/public/assignment/admin.html
@@ -23,9 +23,9 @@
     <!-- Custom styles for this template -->
     <link href="css/dashboard.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="assets/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -78,10 +78,10 @@
             <table class="table table-striped" data-sortable="true" data-sort-name="name" data-sort-order="desc">
               <thead>
                 <tr>
-                  <th data-field="name" data-sortable="true">Username</th>
-                    <th data-field="password" data-sortable="true">Password</th>
-                    <th data-field="role" data-sortable="true">Role</th>
-                    <th data-field="actions" data-sortable="true">Actions</th>
+                  <th data-field="name" data-sortable="true"><i class="fa fa-fw fa-sort"></i>Username</th>
+                    <th data-field="password" data-sortable="true"><i class="fa fa-fw fa-sort"></i>Password</th>
+                    <th data-field="role" data-sortable="true"><i class="fa fa-fw fa-sort"></i>Role</th>
+                    <th data-field="actions" data-sortable="true"><i class="fa fa-fw fa-sort"></i>Actions</th>
                 </tr>
               </thead>
               <tbody>
@@ -122,9 +122,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="assets/js/vendor/holder.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
