--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -25,7 +25,6 @@
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="assets/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -134,7 +133,7 @@
                 <label><input type="checkbox" value="">Student</label>
               </div>
               <div class="checkbox-inline">
-                <label><input type="checkbox" value="" disabled>User</label>
+                <label><input type="checkbox" value="">User</label>
               </div>
               <span class="glyphicon glyphicon-pencil input-group-addon"></span>
                 <span class="glyphicon glyphicon-plus input-group-addon"></span>
@@ -185,9 +184,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="assets/js/vendor/holder.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
