--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,11 @@
 	<nav class="light-blue lighten-1" role="navigation">
 		<div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">SUNS</a>
 	     	<ul class="right hide-on-med-and-down">
-	        	<li><a href="https://github.com/suns1191/cs5610fall2015">GitHub</a></li>
+	        	<li><a target="_blank" href="https://github.com/suns1191">GitHub</a></li>
 	      	</ul>
 
       		<ul id="nav-mobile" class="side-nav">
-        		<li><a href="#">Navbar Link</a></li>
+        		<li><a href="https://github.com/suns1191/cs5610fall2015">GitHub</a></li>
       		</ul>
       		<a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     	</div>
@@ -47,32 +47,34 @@
   </div>
 
 
-  <div class="container">
+  	<div class="container">
 
-    <br><br>
+	    <br><br>
 
-    <div class="section">
-		<div class="row">
-        	<div class="col s12 m6">
-          	<div class="card blue-grey darken-1">
-            	<div class="card-content white-text">
-              		<h1><span class="card-title">User Interface Development</span></h1>
-              			<p>In this assignment you will create a Website that will serve as a prototype of a Web application you will be working on throughout the assignments. The skills you practice on the assignments are meant to be used on a project of your own agreed to with your instructor.</p>
-              			<br/>
-              			<p>The Web application you will be building throughout the assignments is called Form Maker and it consists of a Website that allow users to create forms and share them on the Web as single pages or embedded in their own Web pages. We will refer to those users creating forms as Developers. Other users that visit the Web pages or form pages can then fill in and submit the forms. We will refer to these as Submitters. Developers can login to their account and see the results in tabular format or download them as CSV files. The Web application will be built on the MEAN stack using the four underpinning technologies MongoDB, Express, AngularJS, and Node.js.</p>
-              			<br/>
-						<p>
-						In this assignment you will get started creating the application by first focusing on creating a static set of pages that will serve as a prototype of the final application. The prototype will allow evaluating user interface aspects of the application such as navigation, information layout, page dependencies, modalities, authentication and authorization. Although the pages will have links, forms and buttons to interact with, the application won't actually do anything yet. It will only be an empty shell for now. We will add the functionality as we progress through the rest of the assignments.</p>
-            	</div>
-            <div class="card-action">
-              	<a href="assignment/home.html">Assignment 2</a>
-              	<a href="#">This is a link</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+	    <div class="section">
+			<div class="row">
+	        	<div class="col s12 m6">
+	          	<div class="card blue-grey darken-1">
+	            	<div class="card-content white-text">
+	              			<span class="card-title">User Interface Development</span>
+	              			<p>In this assignment I created a Website that will serve as a prototype of a Web application that I will be working on throughout the assignments.</p>
+	              			<br/>
+	              			<p>The Web application I will be building throughout the assignments is called Form Maker and it consists of a Website that allow users to create forms and share them on the Web as single pages or embedded in their own Web pages. I will refer to those users creating forms as Developers. Other users that visit the Web pages or form pages can then fill in and submit the forms. I will refer to these as Submitters. Developers can login to their account and see the results in tabular format or download them as CSV files. The Web application will be built on the MEAN stack using the four underpinning technologies MongoDB, Express, AngularJS, and Node.js.</p>
+	              			<br/>
+							<p>In this assignment I will get started creating the application by first focusing on creating a static set of pages that will serve as a prototype of the final application. The prototype will allow evaluating user interface aspects of the application such as navigation, information layout, page dependencies, modalities, authentication and authorization. Although the pages will have links, forms and buttons to interact with, the application won't actually do anything yet. It will only be an empty shell for now. I will add the functionality as I make progress through the rest of the assignments.</p>
+	            	</div>
+	            <div class="card-action">
+	              	<div class="chip">
+    					<a target="_blank" href="assignment/home.html">Link to Assignment 2</a>
+  					</div>
+
+	              	<a target="_blank" href="https://github.com/suns1191/cs5610fall2015">GitHub Link</a>
+	            </div>
+	          </div>
+	        </div>
+	      </div>
+	    </div>
+  	</div>
 
 
     
@@ -99,7 +101,8 @@
     	</div>
     	<div class="footer-copyright">
       		<div class="container">
-      			Inspiration taken from <a class="orange-text text-lighten-3" href="http://materializecss.com">MaterializeCSS</a>
+      			© 2015 Copyright Sagar Neeli,
+      			inspiration taken from <a class="orange-text text-lighten-3" href="http://materializecss.com">MaterializeCSS</a>
       		</div>
     	</div>
   	</footer>
