--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
 	            	</div>
 	            <div class="card-action">
 	              	<div class="chip">
-    					<a target="_blank" href="assignment/index.html">Link to Assignment 2</a>
+    					<a target="_blank" href="assignment/home.html">Link to Assignment 2</a>
   					</div>
 
 	              	<a target="_blank" href="https://github.com/suns1191/cs5610fall2015">GitHub Link</a>
