changed the color of header and footer of the main page

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,10 @@
     <!-- Compiled and minified CSS -->
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
 
-    
+
 </head>
 <body>
-	<nav class="light-blue lighten-1" role="navigation">
+	<nav class="grey darken-4" role="navigation">
 		<div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">SUNS</a>
 	     	<ul class="right hide-on-med-and-down">
 	        	<li><a target="_blank" href="https://github.com/suns1191">GitHub</a></li>
@@ -80,7 +80,7 @@
     
 
 
-  	<footer class="page-footer orange">
+  	<footer class="page-footer grey darken-1">
     	<div class="container">
       		<div class="row">
         		<div class="col l6 s12">
