implemented FormService and UserService

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,10 @@
 
 </head>
 <body>
+
+	<!--<video autoplay loop muted >-->
+		<!--<source src="https://youtu.be/BoP2In1qJxc" type="video/ogv">-->
+	<!--</video>-->
 	<nav class="grey darken-4" role="navigation">
 		<div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">SUNS</a>
 	     	<ul class="right hide-on-med-and-down">
