added code for login and register controllers

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -31,7 +31,13 @@
   <script src="sidebar/sidebar.controller.js"></script>
 
   <script src="service/UserService.js"></script>
+
+  <script src="service/FormService.js"></script>
   <!--<script src="userController.js"></script>-->
+
+  <script src="login/login.controller.js"></script>
+
+  <script src="register/register.controller.js"></script>
 
   <!-- Custom styles for this template -->
   <link href="css/dashboard.css" rel="stylesheet">
