--- a/public/assignment/login/login.view.html
+++ b/public/assignment/login/login.view.html
@@ -5,13 +5,13 @@
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputEmail3" ng-model="user.name" placeholder="Username">
+                <input type="text" class="form-control" id="inputEmail3" ng-model="username" placeholder="Username">
             </div>
         </div>
         <div class="form-group">
             <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
             <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword3" ng-model="user.password" placeholder="Password">
+                <input type="password" class="form-control" id="inputPassword3" ng-model="password" placeholder="Password">
             </div>
         </div>
         <div class="form-group">
