--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -39,6 +39,10 @@
 
   <script src="register/register.controller.js"></script>
 
+  <script src="profile/profile.controller.js"></script>
+
+  <script src="form/form.controller.js"></script>
+
   <!-- Custom styles for this template -->
   <link href="css/dashboard.css" rel="stylesheet">
 
