--- a/public/assignment/login/login.view.html
+++ b/public/assignment/login/login.view.html
@@ -5,19 +5,19 @@
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputEmail3" ng-model="username" placeholder="Username">
+                <input type="text" class="form-control" id="inputEmail3" ng-model="user.username" placeholder="Username">
             </div>
         </div>
         <div class="form-group">
             <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
             <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword3" ng-model="password" placeholder="Password">
+                <input type="password" class="form-control" id="inputPassword3" ng-model="user.password" placeholder="Password">
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <a class="btn btn-default" href="profile.html" role="button">Login</a>
-                <!--<a  href="profile.html" role="button" ng-click="">Login</a>-->
+                <!--<a class="btn btn-default" href="profile.html" role="button">Login</a>-->
+                <!--<a  href="profile.html" role="button" ng-click="login()">Login</a>-->
                 <input class="btn btn-default" type="button" ng-click="login()" value="Login" />
             </div>
         </div>
