--- a/public/assignment/profile/profile.view.html
+++ b/public/assignment/profile/profile.view.html
@@ -5,36 +5,37 @@
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputEmail3" placeholder="Username">
+                <input type="email" class="form-control" ng-model="user.username" id="inputEmail3" placeholder="Username">
             </div>
         </div>
         <div class="form-group">
             <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
             <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                <input type="password" class="form-control" ng-model="user.password" id="inputPassword3" placeholder="Password">
             </div>
         </div>
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">First Name</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputEmail3" placeholder="First Name">
+                <input type="text" class="form-control" ng-model="user.firstName" id="inputEmail3" placeholder="First Name">
             </div>
         </div>
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Last Name</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputEmail3" placeholder="Last Name">
+                <input type="text" class="form-control" ng-model="user.lastName" id="inputEmail3" placeholder="Last Name">
             </div>
         </div>
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                <input type="email" class="form-control" ng-model="user.email" id="inputEmail3" placeholder="Email">
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <a class="btn btn-default" href="profile.html" role="button">Update</a>
+                <!--<a class="btn btn-default" href="profile.html" role="button">Update</a>-->
+                <input class="btn btn-default" type="button" ng-click="update()" value="Update"/>
             </div>
         </div>
     </form>
