--- a/public/assignment/register/register.view.html
+++ b/public/assignment/register/register.view.html
@@ -5,32 +5,32 @@
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputEmail3" ng-model="username" placeholder="Username">
+                <input type="email" class="form-control" id="inputEmail3" ng-model="user.username" placeholder="Username">
             </div>
         </div>
         <div class="form-group">
             <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
             <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword3" ng-model="password" placeholder="Password">
+                <input type="password" class="form-control" id="inputPassword3" ng-model="user.password" placeholder="Password">
             </div>
         </div>
         <div class="form-group">
             <label for="inputPassword3" class="col-sm-2 control-label">Verify Password</label>
             <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword3" ng-model="password" placeholder="Verify Password">
+                <input type="password" class="form-control" id="inputPassword3" placeholder="Verify Password">
             </div>
         </div>
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputEmail3" ng-model="email" placeholder="Email">
+                <input type="email" class="form-control" id="inputEmail3" ng-model="user.email" placeholder="Email">
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <!-- <button type="submit" class="btn btn-default"><a href="profile.html">Register</a></button> -->
                 <!-- <button type="submit" class="btn btn-default" href="profile.html" role="button">Register</button> -->
-                <a class="btn btn-default" href="profile.html" role="button">Register</a>
+                <a class="btn btn-default" href="profile.html" role="button" ng-click="register()">Register</a>
             </div>
         </div>
     </form>
