--- a/public/assignment/header/header.view.html
+++ b/public/assignment/header/header.view.html
@@ -12,8 +12,8 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right" ng-controller="HeaderController">
                 <!--<li ng-class="{'active': selectedTab == 'home'}">   <a ng-click="selectedTab = 'home'"    href="#/home">Home</a></li>-->
-                <li ng-class="{'active': selectedTab == 'register'}"><a ng-click="selectedTab = 'register'" href="#/register">Register</a></li>
-                <li ng-class="{'active': selectedTab == 'login'}"><a ng-click="selectedTab = 'login'" href="#/login">Login</a></li>
+                <li ng-class="{'active': $location.url() == '/register'}"><a href="#/register">Register</a></li>
+                <li ng-class="{'active': $location.url() == '/login'}"><a href="#/login">Login</a></li>
                 <li><a href="#">Username</a></li>
                 <li><a href="#">Logout</a></li>
             </ul>
