--- a/public/assignment/sidebar/sidebar.view.html
+++ b/public/assignment/sidebar/sidebar.view.html
@@ -1,9 +1,9 @@
 <div class="col-sm-3 col-md-2 sidebar">
     <ul class="nav nav-sidebar" ng-controller="SidebarController">
         <!--<li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>-->
-        <li ng-class="{'active': selectedTab == 'home'}"><a ng-click="selectedTab = 'home'" href="#/home">Home</a></li>
-        <li ng-class="{'active': selectedTab == 'profile'}"><a ng-click="selectedTab = 'profile'" href="#/profile">Profile</a></li>
-        <li ng-class="{'active': selectedTab == 'admin'}"><a ng-click="selectedTab = 'admin'" href="#/admin">Admin</a></li>
-        <li ng-class="{'active': selectedTab == 'forms'}"><a ng-click="selectedTab = 'forms'" href="#/forms">Forms</a></li>
+        <li ng-class="{'active': $location.url() == '/home'}"><a href="#/home">Home</a></li>
+        <li ng-class="{'active': $location.url() == '/profile'}"><a href="#/profile">Profile</a></li>
+        <li ng-class="{'active': $location.url() == '/admin'}"><a href="#/admin">Admin</a></li>
+        <li ng-class="{'active': $location.url() == '/forms'}"><a href="#/forms">Forms</a></li>
     </ul>
 </div>
