--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -63,9 +63,8 @@
 <div ng-include="'header/header.view.html'"></div>
 
 <div class="container-fluid">
+  <div ng-include="'sidebar/sidebar.view.html'"></div>
   <div class="row">
-    <div ng-include="'sidebar/sidebar.view.html'"></div>s
-
     <div ng-view>
 
     </div>
