--- a/public/assignment/register/register.view.html
+++ b/public/assignment/register/register.view.html
@@ -30,7 +30,8 @@
             <div class="col-sm-offset-2 col-sm-10">
                 <!-- <button type="submit" class="btn btn-default"><a href="profile.html">Register</a></button> -->
                 <!-- <button type="submit" class="btn btn-default" href="profile.html" role="button">Register</button> -->
-                <a class="btn btn-default" href="profile.html" role="button" ng-click="register()">Register</a>
+                <!--<a class="btn btn-default" href="profile.html" role="button" ng-click="register()">Register</a>-->
+                <input class="btn btn-default" type="button" ng-click="register()" value="Register" />
             </div>
         </div>
     </form>
