fixed bugs with update form

--- a/public/assignment/form/form.view.html
+++ b/public/assignment/form/form.view.html
@@ -19,10 +19,10 @@
                 <td><input type="text" class="form-control" placeholder="name" ng-model="newForm.name"></td>
                 <td>
                     <a ng-click="addForm()">
-                        <span class="glyphicon glyphicon-plus btn btn-primary">&nbsp;</span>
+                        <span class="glyphicon glyphicon-plus">&nbsp;</span>
                     </a>
                     <a ng-click="updateForm()">
-                        <span class="glyphicon glyphicon-ok btn btn-success"></span>
+                        <span class="glyphicon glyphicon-ok"></span>
                     </a>
                 </td>
             </tr>
@@ -31,10 +31,10 @@
                 <td> {{form.name}} </td>
                 <td>
                     <a ng-click="deleteForm($index)">
-                        <span class="glyphicon glyphicon-remove btn btn-danger">&nbsp;</span>
+                        <span class="glyphicon glyphicon-remove">&nbsp;</span>
                     </a>
                     <a ng-click="selectForm($index)">
-                        <span class="glyphicon glyphicon-pencil btn btn-success"></span>
+                        <span class="glyphicon glyphicon-pencil"></span>
                     </a>
                 </td>
             </tr>
