--- a/public/assignment/header/header.view.html
+++ b/public/assignment/header/header.view.html
@@ -12,7 +12,7 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right" ng-controller="HeaderController">
                 <!--<li ng-class="{'active': selectedTab == 'home'}">   <a ng-click="selectedTab = 'home'"    href="#/home">Home</a></li>-->
-                <li ng-class="{'active': $location.url() == '/register'}"><a href="#/register">Register</a></li>
+                <li ng-class="{'active': $location.url() == '/register'}"><a href="#/register" class="active">Register</a></li>
                 <li ng-class="{'active': $location.url() == '/login'}"><a href="#/login">Login</a></li>
                 <li><a href="#">Username</a></li>
                 <li><a href="#">Logout</a></li>
