--- a/public/assignment/profile/profile.view.html
+++ b/public/assignment/profile/profile.view.html
@@ -5,7 +5,7 @@
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" ng-model="user.username" id="inputEmail3" placeholder="Username">
+                <input type="text" class="form-control" ng-model="user.username" id="inputEmail3" placeholder="Username">
             </div>
         </div>
         <div class="form-group">
