--- a/public/assignment/register/register.view.html
+++ b/public/assignment/register/register.view.html
@@ -5,7 +5,7 @@
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputEmail3" ng-model="user.username" placeholder="Username">
+                <input type="text" class="form-control" id="inputEmail3" ng-model="user.username" placeholder="Username">
             </div>
         </div>
         <div class="form-group">
@@ -17,7 +17,7 @@
         <div class="form-group">
             <label for="inputPassword3" class="col-sm-2 control-label">Verify Password</label>
             <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword3" placeholder="Verify Password">
+                <input type="password" class="form-control" id="inputPassword3" ng-model="verifyPassword" placeholder="Verify Password">
             </div>
         </div>
         <div class="form-group">
