made validation to the login controller

--- a/public/assignment/form/form.view.html
+++ b/public/assignment/form/form.view.html
@@ -16,7 +16,7 @@
             </thead>
             <tbody>
             <tr>
-                <td><input type="text" class="form-control" placeholder="name" ng-model="newForm.name"></td>
+                <td><input type="text" class="form-control" placeholder="name" ng-model="newForm.name"/></td>
                 <td>
                     <a ng-click="addForm()">
                         <span class="glyphicon glyphicon-plus">&nbsp;</span>
