--- a/public/assignment/header/header.view.html
+++ b/public/assignment/header/header.view.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverse navbar-fixed-top" ng-controller="HeaderController">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -10,12 +10,12 @@
             <a class="navbar-brand" href="#/home">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right" ng-controller="HeaderController">
+            <ul class="nav navbar-nav navbar-right">
                 <!--<li ng-class="{'active': selectedTab == 'home'}">   <a ng-click="selectedTab = 'home'"    href="#/home">Home</a></li>-->
-                <li ng-class="{'active': $location.url() == '/register'}"><a href="#/register" class="active">Register</a></li>
-                <li ng-class="{'active': $location.url() == '/login'}"><a href="#/login">Login</a></li>
-                <li><a href="#">Username</a></li>
-                <li><a href="#">Logout</a></li>
+                <li ng-if="!user" ng-class="{'active': $location.url() == '/register'}"><a href="#/register" class="active">Register</a></li>
+                <li ng-if="!user" ng-class="{'active': $location.url() == '/login'}"><a href="#/login">Login</a></li>
+                <li ng-if="user"><a href="#/profile">Username</a></li>
+                <li ng-if="user"><a href="#/" ng-click="logout()">Logout</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <input type="text" class="form-control" placeholder="Search...">
