added form validation for the register form

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -22,6 +22,9 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-route.js"></script>
 
+  <!-- load ngmessages -->
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-messages.js"></script>
+
   <script src="app.js"></script>
 
   <script src="config.js"></script>
