--- a/public/assignment/register/register.view.html
+++ b/public/assignment/register/register.view.html
@@ -1,11 +1,17 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <h1 class="page-header">Register</h1>
 
-    <form class="form-horizontal">
-        <div class="form-group">
+    <form name="userForm" class="form-horizontal" novalidate>
+        <div class="form-group" ng-class="{ 'has-error': userForm.name.$touched && userForm.name.$invalid }">
             <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputEmail3" ng-model="user.username" placeholder="Username">
+                <input name="name" type="text" class="form-control" id="inputEmail3" ng-model="user.username" ng-minlength="3"
+                       ng-maxlength="8" placeholder="Username" required>
+                <div class="help-block" ng-messages="userForm.name.$error" ng-if="userForm.name.$touched">
+                    <p ng-message="minlength">Your name is too short.</p>
+                    <p ng-message="maxlength">Your name is too long.</p>
+                    <p ng-message="required">Your name is required.</p>
+                </div>
             </div>
         </div>
         <div class="form-group">
@@ -23,7 +29,11 @@
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputEmail3" ng-model="user.email" placeholder="Email">
+                <input name="email" type="email" class="form-control" id="inputEmail3" ng-model="user.email" placeholder="Email"
+                       ng-minlength="5" ng-maxlength="20" required>
+                <div class="help-block" ng-messages="userForm.email.$error" ng-if="userForm.email.$touched">
+                    <div ng-messages-include="messages.html"></div>
+                </div>
             </div>
         </div>
         <div class="form-group">
@@ -31,9 +41,11 @@
                 <!-- <button type="submit" class="btn btn-default"><a href="profile.html">Register</a></button> -->
                 <!-- <button type="submit" class="btn btn-default" href="profile.html" role="button">Register</button> -->
                 <!--<a class="btn btn-default" href="profile.html" role="button" ng-click="register()">Register</a>-->
-                <input class="btn btn-default" type="button" ng-click="register()" value="Register" />
+                <!--<input class="btn btn-default" type="button" ng-click="register()" value="Register" />-->
+                <button type="submit" class="btn btn-default" ng-disabled="userForm.$invalid"
+                        ng-click="register()">Register</button>
             </div>
         </div>
     </form>
-
+    <pre>userForm.name.$error = {{ userForm.name.$error | json }}</pre>
 </div>
