Fixed remaining bugs

--- a/public/assignment/login/login.view.html
+++ b/public/assignment/login/login.view.html
@@ -18,7 +18,7 @@
             <div class="col-sm-offset-2 col-sm-10">
                 <!--<a class="btn btn-default" href="profile.html" role="button">Login</a>-->
                 <!--<a  href="profile.html" role="button" ng-click="login()">Login</a>-->
-                <input class="btn btn-default" type="button" ng-click="login()" value="Login" />
+                <button type="submit" ng-click="login()" class="btn btn-default">Login</button>
             </div>
         </div>
     </form>
