--- a/public/assignment/profile/profile.view.html
+++ b/public/assignment/profile/profile.view.html
@@ -1,43 +1,51 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h1 class="page-header">Profile</h1>
 
-    <form class="form-horizontal">
-        <div class="form-group">
-            <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" ng-model="user.username" id="inputEmail3" placeholder="Username">
+    <div ng-if="user">
+        <h1 class="page-header">Profile</h1>
+
+        <form class="form-horizontal">
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" ng-model="user.username" id="inputEmail3" placeholder="Username">
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-            <div class="col-sm-10">
-                <input type="password" class="form-control" ng-model="user.password" id="inputPassword3" placeholder="Password">
+            <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" ng-model="user.password" id="inputPassword3" placeholder="Password">
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-sm-2 control-label">First Name</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" ng-model="user.firstName" id="inputEmail3" placeholder="First Name">
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-2 control-label">First Name</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" ng-model="user.firstName" id="inputEmail3" placeholder="First Name">
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-sm-2 control-label">Last Name</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" ng-model="user.lastName" id="inputEmail3" placeholder="Last Name">
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-2 control-label">Last Name</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" ng-model="user.lastName" id="inputEmail3" placeholder="Last Name">
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-            <div class="col-sm-10">
-                <input type="email" class="form-control" ng-model="user.email" id="inputEmail3" placeholder="Email">
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+                <div class="col-sm-10">
+                    <input type="email" class="form-control" ng-model="user.email" id="inputEmail3" placeholder="Email">
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <!--<a class="btn btn-default" href="profile.html" role="button">Update</a>-->
-                <input class="btn btn-default" type="button" ng-click="update()" value="Update"/>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <!--<a class="btn btn-default" href="profile.html" role="button">Update</a>-->
+                    <button type="submit" ng-click="update()" class="btn btn-default">Update</button>
+                </div>
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
+
+    <!-- if user doesn't exists -->
+    <div ng-if="!user">
+        <h1 class="page-header">Please <a href="#/login">Login</a> to access this page.</h1>
+    </div>
 
 </div>
