--- a/public/index.html
+++ b/public/index.html
@@ -58,24 +58,61 @@
 	    <div class="section">
 			<div class="row">
 	        	<div class="col s12 m6">
-	          	<div class="card blue-grey darken-1">
-	            	<div class="card-content white-text">
-	              			<span class="card-title">User Interface Development</span>
-	              			<p>In this assignment I created a Website that will serve as a prototype of a Web application that I will be working on throughout the assignments.</p>
-	              			<br/>
-	              			<p>The Web application I will be building throughout the assignments is called Form Maker and it consists of a Website that allow users to create forms and share them on the Web as single pages or embedded in their own Web pages. I will refer to those users creating forms as Developers. Other users that visit the Web pages or form pages can then fill in and submit the forms. I will refer to these as Submitters. Developers can login to their account and see the results in tabular format or download them as CSV files. The Web application will be built on the MEAN stack using the four underpinning technologies MongoDB, Express, AngularJS, and Node.js.</p>
-	              			<br/>
-							<p>In this assignment I will get started creating the application by first focusing on creating a static set of pages that will serve as a prototype of the final application. The prototype will allow evaluating user interface aspects of the application such as navigation, information layout, page dependencies, modalities, authentication and authorization. Although the pages will have links, forms and buttons to interact with, the application won't actually do anything yet. It will only be an empty shell for now. I will add the functionality as I make progress through the rest of the assignments.</p>
-	            	</div>
-	            <div class="card-action">
-	              	<div class="chip">
-    					<a target="_blank" href="assignment/home.html">Link to Assignment 2</a>
-  					</div>
-
-	              	<a target="_blank" href="https://github.com/suns1191/cs5610fall2015">GitHub Link</a>
-	            </div>
-	          </div>
+					<div class="card blue-grey darken-1">
+						<div class="card-content white-text">
+								<span class="card-title">User Interface Development</span>
+								<p>In this assignment I created a Website that will serve as a prototype of a Web
+									application that I will be working on throughout the assignments.</p>
+								<br/>
+								<p>The Web application I will be building throughout the assignments
+									is called Form Maker and it consists of a Website that allow users to create
+									forms and share them on the Web as single pages or embedded in their own Web pages.
+									I will refer to those users creating forms as Developers. Other users that visit the
+									Web pages or form pages can then fill in and submit the forms. I will refer to these
+									as Submitters. Developers can login to their account and see the results in tabular
+									format or download them as CSV files. The Web application will be built on the MEAN
+									stack using the four underpinning technologies MongoDB, Express, AngularJS, and Node.js.</p>
+								<br/>
+								<p>In this assignment I will get started creating the application by first focusing on
+									creating a static set of pages that will serve as a prototype of the final application.
+									The prototype will allow evaluating user interface aspects of the application such as
+									navigation, information layout, page dependencies, modalities, authentication and
+									authorization. Although the pages will have links, forms and buttons to interact with,
+									the application won't actually do anything yet. It will only be an empty shell for now.
+									I will add the functionality as I make progress through the rest of the assignments.</p>
+						</div>
+					<div class="card-action">
+						<div class="chip">
+							<a target="_blank" href="assignment/home.html">Link to Assignment 2</a>
+						</div>
+						<div class="chip">
+							<a target="_blank" href="https://github.com/suns1191/cs5610fall2015">GitHub Link</a>
+						</div>
+					</div>
+				  </div>
 	        </div>
+				<div class="col s12 m6">
+				<div class="card blue-grey darken-1">
+					<div class="card-content white-text">
+						<span class="card-title">Client Side Development</span>
+						<p>In the previous assignment I used HTML, CSS, and Bootstrap to create a prototype
+							of a Web application. The application consisted of several Web static pages that allowed
+							us to consider navigation, page layout, look and feel. In this assignment you I used
+							jQuery, one of the most popular JavaScript libraries, to add many dynamic behaviours.
+							I also used AngularJS to convert the application into a single page application
+							and become familiar with the Model View Controller design pattern..</p>
+						<br/>
+					</div>
+					<div class="card-action">
+						<div class="chip">
+							<a target="_blank" href="assignment/index.html">Link to Assignment 3</a>
+						</div>
+						<div class="chip">
+							<a target="_blank" href="https://github.com/suns1191/cs5610fall2015">GitHub Link</a>
+						</div>
+					</div>
+				</div>
+				</div>
 	      </div>
 	    </div>
   	</div>
