Done most of the form-fields

--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -41,10 +41,12 @@
     <script src="views/profile/profile.controller.js"></script>
 
     <script src="views/form/form.controller.js"></script>
+    <script src="views/field/field.controller.js"></script>
 
     <script src="service/UserService.js"></script>
 
     <script src="service/FormService.js"></script>
+    <script src="service/FieldService.js"></script>
     <!-- Custom styles for this template -->
     <link href="css/dashboard.css" rel="stylesheet">
 
